[gd_scene load_steps=5 format=3 uid="uid://2lp7g00o514q"]

[ext_resource type="Script" uid="uid://dqwlb5gtt05ev" path="res://Scripts/Ant.gd" id="1_7lpof"]
[ext_resource type="Texture2D" uid="uid://dq1sxe6ouphso" path="res://Assets/ant.jpg" id="2_0aatc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ruxgy"]
size = Vector2(194.5, 110.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_7lpof"]
radius = 61.0737

[node name="Ant" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_7lpof")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_0aatc")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -98.0
offset_top = -82.0
offset_right = 97.0
offset_bottom = -55.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 0.75)
shape = SubResource("RectangleShape2D_ruxgy")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="AttackCollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-127, -1)
shape = SubResource("CircleShape2D_7lpof")

[node name="AntStats" type="Node" parent="."]

[node name="DebugLabel" type="Label" parent="."]
offset_left = -19.0
offset_top = 108.0
offset_right = 21.0
offset_bottom = 131.0
metadata/_edit_use_anchors_ = true
